--- a/Suumo_test.ipynb
+++ b/Suumo_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "cc2ae1b3-cf0a-45c4-a7ca-0cf59fafa20c",
    "metadata": {
     "tags": []
@@ -12,7 +12,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████| 5/5 [03:07<00:00, 37.58s/it]\n"
+      "100%|█████████████████████████████████████████████| 5/5 [03:01<00:00, 36.38s/it]\n"
      ]
     }
    ],
@@ -43,6 +43,12 @@
     "#time\n",
     "from time import sleep\n",
     "from tqdm import tqdm\n",
+    "\n",
+    "#Google_spread_sheet\n",
+    "from google.oauth2.service_account import Credentials\n",
+    "from oauth2client.service_account import ServiceAccountCredentials\n",
+    "import gspread\n",
+    "\n",
     "\n",
     "#固定情報\n",
     "URL = 'https://suumo.jp/jj/chintai/ichiran/FR301FC001/?ar=030&ta=13&bs=040&ekInput=25620&tj=20&nk=-1&ct=9999999&cb=0.0&et=9999999&mt=9999999&mb=0&cn=9999999&shkr1=03&shkr2=03&shkr3=03&shkr4=03&fw2=&pc=30'\n",
@@ -158,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "669ba048-0aab-4e58-810c-4610a81f590a",
    "metadata": {
     "tags": []
@@ -207,8 +213,8 @@
        "      <td>ＪＲ京葉線 葛西臨海公園駅 8階建 築11年</td>\n",
        "      <td>東京都江戸川区南葛西４</td>\n",
        "      <td>ＪＲ京葉線/葛西臨海公園駅 歩21分</td>\n",
-       "      <td>ＪＲ京葉線/舞浜駅 歩38分</td>\n",
-       "      <td>東京メトロ東西線/葛西駅 歩23分</td>\n",
+       "      <td>ＪＲ京葉線/舞浜駅 歩34分</td>\n",
+       "      <td>東京メトロ東西線/葛西駅 歩25分</td>\n",
        "      <td>築11年</td>\n",
        "      <td>8階建</td>\n",
        "      <td>8階</td>\n",
@@ -223,11 +229,11 @@
        "      <th>1</th>\n",
        "      <td>フラット谷中</td>\n",
        "      <td>東京都台東区谷中３</td>\n",
-       "      <td>東京メトロ千代田線/千駄木駅 歩3分</td>\n",
-       "      <td>ＪＲ山手線/日暮里駅 歩10分</td>\n",
-       "      <td>都営三田線/白山駅 歩17分</td>\n",
+       "      <td>東京メトロ千代田線/千駄木駅 歩4分</td>\n",
+       "      <td>ＪＲ山手線/日暮里駅 歩6分</td>\n",
+       "      <td>日暮里・舎人ライナー/日暮里駅 歩7分</td>\n",
        "      <td>築35年</td>\n",
-       "      <td>地下1地上3階建</td>\n",
+       "      <td>3階建</td>\n",
        "      <td>3階</td>\n",
        "      <td>7万円</td>\n",
        "      <td>5000円</td>\n",
@@ -305,7 +311,58 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3127</th>\n",
+       "      <th>3157</th>\n",
+       "      <td>晴花マンション</td>\n",
+       "      <td>東京都台東区池之端１</td>\n",
+       "      <td>東京メトロ千代田線/湯島駅 歩7分</td>\n",
+       "      <td>東京メトロ千代田線/根津駅 歩8分</td>\n",
+       "      <td>東京メトロ銀座線/上野広小路駅 歩11分</td>\n",
+       "      <td>築46年</td>\n",
+       "      <td>5階建</td>\n",
+       "      <td>5階</td>\n",
+       "      <td>10.9万円</td>\n",
+       "      <td>6000円</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>1DK</td>\n",
+       "      <td>30.11m2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3158</th>\n",
+       "      <td>都営三田線 神保町駅 12階建 築20年</td>\n",
+       "      <td>東京都千代田区神田小川町３</td>\n",
+       "      <td>都営三田線/神保町駅 歩4分</td>\n",
+       "      <td>東京メトロ千代田線/新御茶ノ水駅 歩9分</td>\n",
+       "      <td>東京メトロ東西線/竹橋駅 歩10分</td>\n",
+       "      <td>築20年</td>\n",
+       "      <td>12階建</td>\n",
+       "      <td>9階</td>\n",
+       "      <td>13.8万円</td>\n",
+       "      <td>-</td>\n",
+       "      <td>13.8万円</td>\n",
+       "      <td>13.8万円</td>\n",
+       "      <td>ワンルーム</td>\n",
+       "      <td>31.34m2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3159</th>\n",
+       "      <td>都営三田線 神保町駅 12階建 築20年</td>\n",
+       "      <td>東京都千代田区神田小川町３</td>\n",
+       "      <td>都営三田線/神保町駅 歩4分</td>\n",
+       "      <td>東京メトロ千代田線/新御茶ノ水駅 歩9分</td>\n",
+       "      <td>東京メトロ東西線/竹橋駅 歩10分</td>\n",
+       "      <td>築20年</td>\n",
+       "      <td>12階建</td>\n",
+       "      <td>9階</td>\n",
+       "      <td>13.8万円</td>\n",
+       "      <td>-</td>\n",
+       "      <td>13.8万円</td>\n",
+       "      <td>13.8万円</td>\n",
+       "      <td>ワンルーム</td>\n",
+       "      <td>31.34m2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3160</th>\n",
        "      <td>東京メトロ千代田線 湯島駅 12階建 築20年</td>\n",
        "      <td>東京都文京区湯島３</td>\n",
        "      <td>東京メトロ千代田線/湯島駅 歩1分</td>\n",
@@ -322,7 +379,7 @@
        "      <td>21.45m2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3128</th>\n",
+       "      <th>3161</th>\n",
        "      <td>東京メトロ千代田線 湯島駅 12階建 築20年</td>\n",
        "      <td>東京都文京区湯島３</td>\n",
        "      <td>東京メトロ千代田線/湯島駅 歩1分</td>\n",
@@ -338,88 +395,37 @@
        "      <td>1K</td>\n",
        "      <td>21.29m2</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3129</th>\n",
-       "      <td>モーニングサイド銀座</td>\n",
-       "      <td>東京都中央区京橋３</td>\n",
-       "      <td>東京メトロ銀座線/京橋駅 歩2分</td>\n",
-       "      <td>東京メトロ有楽町線/銀座一丁目駅 歩7分</td>\n",
-       "      <td>ＪＲ京葉線/八丁堀駅 歩8分</td>\n",
-       "      <td>築22年</td>\n",
-       "      <td>13階建</td>\n",
-       "      <td>3階</td>\n",
-       "      <td>9.6万円</td>\n",
-       "      <td>8000円</td>\n",
-       "      <td>9.6万円</td>\n",
-       "      <td>9.6万円</td>\n",
-       "      <td>1K</td>\n",
-       "      <td>20.28m2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3130</th>\n",
-       "      <td>モーニングサイド銀座</td>\n",
-       "      <td>東京都中央区京橋３</td>\n",
-       "      <td>東京メトロ銀座線/京橋駅 歩2分</td>\n",
-       "      <td>東京メトロ有楽町線/銀座一丁目駅 歩7分</td>\n",
-       "      <td>ＪＲ京葉線/八丁堀駅 歩8分</td>\n",
-       "      <td>築22年</td>\n",
-       "      <td>13階建</td>\n",
-       "      <td>3階</td>\n",
-       "      <td>9.9万円</td>\n",
-       "      <td>8000円</td>\n",
-       "      <td>9.9万円</td>\n",
-       "      <td>9.9万円</td>\n",
-       "      <td>1K</td>\n",
-       "      <td>20.28m2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3131</th>\n",
-       "      <td>モーニングサイド銀座</td>\n",
-       "      <td>東京都中央区京橋３</td>\n",
-       "      <td>東京メトロ銀座線/京橋駅 歩2分</td>\n",
-       "      <td>東京メトロ有楽町線/銀座一丁目駅 歩7分</td>\n",
-       "      <td>ＪＲ京葉線/八丁堀駅 歩8分</td>\n",
-       "      <td>築22年</td>\n",
-       "      <td>13階建</td>\n",
-       "      <td>13階</td>\n",
-       "      <td>11.7万円</td>\n",
-       "      <td>8000円</td>\n",
-       "      <td>11.7万円</td>\n",
-       "      <td>-</td>\n",
-       "      <td>1K</td>\n",
-       "      <td>27.87m2</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3132 rows × 14 columns</p>\n",
+       "<p>3162 rows × 14 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         Name      Address             Status1  \\\n",
-       "0      ＪＲ京葉線 葛西臨海公園駅 8階建 築11年  東京都江戸川区南葛西４  ＪＲ京葉線/葛西臨海公園駅 歩21分   \n",
-       "1                      フラット谷中    東京都台東区谷中３  東京メトロ千代田線/千駄木駅 歩3分   \n",
-       "2                 広尾ガーデンヒルズM棟    東京都渋谷区広尾４   東京メトロ日比谷線/広尾駅 歩6分   \n",
-       "3                 広尾ガーデンヒルズM棟    東京都渋谷区広尾４   東京メトロ日比谷線/広尾駅 歩6分   \n",
-       "4                 広尾ガーデンヒルズM棟    東京都渋谷区広尾４   東京メトロ日比谷線/広尾駅 歩6分   \n",
-       "...                       ...          ...                 ...   \n",
-       "3127  東京メトロ千代田線 湯島駅 12階建 築20年    東京都文京区湯島３   東京メトロ千代田線/湯島駅 歩1分   \n",
-       "3128  東京メトロ千代田線 湯島駅 12階建 築20年    東京都文京区湯島３   東京メトロ千代田線/湯島駅 歩1分   \n",
-       "3129               モーニングサイド銀座    東京都中央区京橋３    東京メトロ銀座線/京橋駅 歩2分   \n",
-       "3130               モーニングサイド銀座    東京都中央区京橋３    東京メトロ銀座線/京橋駅 歩2分   \n",
-       "3131               モーニングサイド銀座    東京都中央区京橋３    東京メトロ銀座線/京橋駅 歩2分   \n",
+       "                         Name        Address             Status1  \\\n",
+       "0      ＪＲ京葉線 葛西臨海公園駅 8階建 築11年    東京都江戸川区南葛西４  ＪＲ京葉線/葛西臨海公園駅 歩21分   \n",
+       "1                      フラット谷中      東京都台東区谷中３  東京メトロ千代田線/千駄木駅 歩4分   \n",
+       "2                 広尾ガーデンヒルズM棟      東京都渋谷区広尾４   東京メトロ日比谷線/広尾駅 歩6分   \n",
+       "3                 広尾ガーデンヒルズM棟      東京都渋谷区広尾４   東京メトロ日比谷線/広尾駅 歩6分   \n",
+       "4                 広尾ガーデンヒルズM棟      東京都渋谷区広尾４   東京メトロ日比谷線/広尾駅 歩6分   \n",
+       "...                       ...            ...                 ...   \n",
+       "3157                  晴花マンション     東京都台東区池之端１   東京メトロ千代田線/湯島駅 歩7分   \n",
+       "3158     都営三田線 神保町駅 12階建 築20年  東京都千代田区神田小川町３      都営三田線/神保町駅 歩4分   \n",
+       "3159     都営三田線 神保町駅 12階建 築20年  東京都千代田区神田小川町３      都営三田線/神保町駅 歩4分   \n",
+       "3160  東京メトロ千代田線 湯島駅 12階建 築20年      東京都文京区湯島３   東京メトロ千代田線/湯島駅 歩1分   \n",
+       "3161  東京メトロ千代田線 湯島駅 12階建 築20年      東京都文京区湯島３   東京メトロ千代田線/湯島駅 歩1分   \n",
        "\n",
-       "                   Status2              Status3  Year Total Floor Floor  \\\n",
-       "0           ＪＲ京葉線/舞浜駅 歩38分    東京メトロ東西線/葛西駅 歩23分  築11年         8階建    8階   \n",
-       "1          ＪＲ山手線/日暮里駅 歩10分       都営三田線/白山駅 歩17分  築35年    地下1地上3階建    3階   \n",
-       "2         都営大江戸線/六本木駅 歩20分  東京メトロ千代田線/乃木坂駅 歩21分  築40年    地下1地上7階建    1階   \n",
-       "3         都営大江戸線/六本木駅 歩20分  東京メトロ千代田線/乃木坂駅 歩21分  築40年    地下1地上7階建    5階   \n",
-       "4         都営大江戸線/六本木駅 歩20分  東京メトロ千代田線/乃木坂駅 歩21分  築40年    地下1地上7階建    5階   \n",
-       "...                    ...                  ...   ...         ...   ...   \n",
-       "3127   東京メトロ銀座線/上野広小路駅 歩5分       ＪＲ山手線/御徒町駅 歩7分  築20年        12階建    9階   \n",
-       "3128   東京メトロ銀座線/上野広小路駅 歩5分       ＪＲ山手線/御徒町駅 歩7分  築20年        12階建   10階   \n",
-       "3129  東京メトロ有楽町線/銀座一丁目駅 歩7分       ＪＲ京葉線/八丁堀駅 歩8分  築22年        13階建    3階   \n",
-       "3130  東京メトロ有楽町線/銀座一丁目駅 歩7分       ＪＲ京葉線/八丁堀駅 歩8分  築22年        13階建    3階   \n",
-       "3131  東京メトロ有楽町線/銀座一丁目駅 歩7分       ＪＲ京葉線/八丁堀駅 歩8分  築22年        13階建   13階   \n",
+       "                   Status2               Status3  Year Total Floor Floor  \\\n",
+       "0           ＪＲ京葉線/舞浜駅 歩34分     東京メトロ東西線/葛西駅 歩25分  築11年         8階建    8階   \n",
+       "1           ＪＲ山手線/日暮里駅 歩6分   日暮里・舎人ライナー/日暮里駅 歩7分  築35年         3階建    3階   \n",
+       "2         都営大江戸線/六本木駅 歩20分   東京メトロ千代田線/乃木坂駅 歩21分  築40年    地下1地上7階建    1階   \n",
+       "3         都営大江戸線/六本木駅 歩20分   東京メトロ千代田線/乃木坂駅 歩21分  築40年    地下1地上7階建    5階   \n",
+       "4         都営大江戸線/六本木駅 歩20分   東京メトロ千代田線/乃木坂駅 歩21分  築40年    地下1地上7階建    5階   \n",
+       "...                    ...                   ...   ...         ...   ...   \n",
+       "3157     東京メトロ千代田線/根津駅 歩8分  東京メトロ銀座線/上野広小路駅 歩11分  築46年         5階建    5階   \n",
+       "3158  東京メトロ千代田線/新御茶ノ水駅 歩9分     東京メトロ東西線/竹橋駅 歩10分  築20年        12階建    9階   \n",
+       "3159  東京メトロ千代田線/新御茶ノ水駅 歩9分     東京メトロ東西線/竹橋駅 歩10分  築20年        12階建    9階   \n",
+       "3160   東京メトロ銀座線/上野広小路駅 歩5分        ＪＲ山手線/御徒町駅 歩7分  築20年        12階建    9階   \n",
+       "3161   東京メトロ銀座線/上野広小路駅 歩5分        ＪＲ山手線/御徒町駅 歩7分  築20年        12階建   10階   \n",
        "\n",
        "        Rent Management Fee Deposit Granuity Fee House Layout Exclusive Area  \n",
        "0       15万円          9000円    15万円         15万円         2LDK         60.3m2  \n",
@@ -428,16 +434,16 @@
        "3       63万円              -   126万円         63万円         4LDK       108.95m2  \n",
        "4       65万円              -   195万円         65万円         2LDK        85.51m2  \n",
        "...      ...            ...     ...          ...          ...            ...  \n",
-       "3127   8.5万円         10000円   8.5万円            -           1K        21.45m2  \n",
-       "3128     9万円         10000円     9万円            -           1K        21.29m2  \n",
-       "3129   9.6万円          8000円   9.6万円        9.6万円           1K        20.28m2  \n",
-       "3130   9.9万円          8000円   9.9万円        9.9万円           1K        20.28m2  \n",
-       "3131  11.7万円          8000円  11.7万円            -           1K        27.87m2  \n",
+       "3157  10.9万円          6000円       -            -          1DK        30.11m2  \n",
+       "3158  13.8万円              -  13.8万円       13.8万円        ワンルーム        31.34m2  \n",
+       "3159  13.8万円              -  13.8万円       13.8万円        ワンルーム        31.34m2  \n",
+       "3160   8.5万円         10000円   8.5万円            -           1K        21.45m2  \n",
+       "3161     9万円         10000円     9万円            -           1K        21.29m2  \n",
        "\n",
-       "[3132 rows x 14 columns]"
+       "[3162 rows x 14 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,8 +454,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1f0e3734-12c2-4775-88d9-fb6feb9fbf01",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/xq/35rl0pc53_5dsrsn7dmxjx9c0000gn/T/ipykernel_12777/1455212042.py:12: DeprecationWarning: [Deprecated][in version 6.0.0]: Method signature's arguments 'range_name' and 'values' will change their order. We recommend using named arguments for minimal impact. In addition, the argument 'values' will be mandatory of type: 'List[List]'. (ex) Worksheet.update(values = [[]], range_name=) \n",
+      "  ws.update('A1', df_to_sheet)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'spreadsheetId': '1Jwe_8URWJ6e8lsXf0jW1-HAZqrTxXaSNBqk7MuZ0byM',\n",
+       " 'updatedRange': \"'シート1'!A1:N3163\",\n",
+       " 'updatedRows': 3163,\n",
+       " 'updatedColumns': 14,\n",
+       " 'updatedCells': 44030}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#お決まりの2行\n",
+    "scope = ['https://www.googleapis.com/auth/spreadsheets','https://www.googleapis.com/auth/drive']\n",
+    "credentials = Credentials.from_service_account_file(\"-------------json URL----------------\", scopes = scope)\n",
+    "\n",
+    "gc = gspread.authorize(credentials)\n",
+    "\n",
+    "SPREADSHEET_KEY = '-----------------Sheet URL----------------------'\n",
+    "wb = gc.open_by_key(SPREADSHEET_KEY)\n",
+    "ws = wb.worksheet('シート1')\n",
+    "\n",
+    "df_to_sheet = [df.columns.values.tolist()] + df.values.tolist()\n",
+    "ws.update('A1', df_to_sheet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40d98cf4-697c-4403-a421-8f6112e77264",
    "metadata": {},
    "outputs": [],
    "source": []
